--- a/main.css
+++ b/main.css
@@ -78,3 +78,28 @@ body {
 .gota-3 {
     background-color: #ff1493;
 }
+
+.caixa-do-palito {
+    background-color: transparent;
+    display: flex;
+    justify-content: space-around;
+}
+
+.base-palito {
+    height: 100px;
+    width: 15px;
+    margin: 20px;
+    border-radius: 20%;
+}
+
+.palito-1 {
+    background-color: #fff
+}
+
+.palito-2 {
+    background-color: #000
+}
+
+.palito-3 {
+    background-color: #ff1493
+}
