--- a/main.css
+++ b/main.css
@@ -103,3 +103,32 @@ body {
 .palito-3 {
     background-color: #ff1493
 }
+
+.caixa-do-triangulo {
+    background-color: transparent;
+    display: flex;
+    justify-content: space-around;
+}
+
+.base-triangulo {
+    width: 0px; 
+    height: 0px; 
+    border-left: 65px solid transparent;
+    border-right: 65px solid transparent;
+    border-bottom: 120px solid transparent;
+}
+
+.triangulo-1 {
+    background-color: transparent;
+    border-bottom-color: #fff;
+}
+
+.triangulo-2 {
+    background-color: transparent;
+    border-bottom-color: #000;
+}
+
+.triangulo-3 {
+    background-color: transparent;
+    border-bottom-color: #ff1493;
+}
